--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     }
 
     let html = `
-        <div class="hero-text"><h1>Mau makan apa?</h1><p>Temukan rasa favoritmu hari ini.</p></div>
+        <div class="hero-text"><h1>Mau pesan apa?</h1><p>Terserahh pokoknya yang penting pesann.</p></div>
         <div class="search-container"><input type="text" id="searchInput" class="search-input" placeholder="🔍 Cari bakso, es teh..." onkeyup="realtimeSearch(this.value)"></div>
         <div class="cat-wrapper">
             <button class="cat-btn ${kategoriAktif=='Semua'?'active':''}" onclick="gantiKategori('Semua')">Semua</button>
@@ -348,3 +348,4 @@
 </script>
 </body>
 </html>
+
